--- a/package.json
+++ b/package.json
@@ -10,13 +10,49 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "@vue/compiler-sfc": "^3.0.0",
         "axios": "^0.21",
+        "babel-eslint": "^10.1.0",
+        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vue-loader": "^16.8.3"
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue-loader": "^16.8.3",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "vue": "^3.2.22"
-    }
+        "@babel/core": "^7.16.5",
+        "@babel/preset-env": "^7.16.5",
+        "babel-loader": "^8.2.3",
+        "core-js": "^3.6.5",
+        "sass-resources-loader": "^2.2.4",
+        "vue": "^3.0.0",
+        "vue-router": "^4.0.12",
+        "vuex": "^4.0.2"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/vue3-essential",
+            "eslint:recommended"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint"
+        },
+        "rules": []
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
