--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "dependencies": {
         "@babel/core": "^7.16.5",
         "@babel/preset-env": "^7.16.5",
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/vue-fontawesome": "^3.0.0-5",
         "babel-loader": "^8.2.3",
         "core-js": "^3.6.5",
         "sass-resources-loader": "^2.2.4",
