--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue-loader": "^16.8.3",
-        "vue-template-compiler": "^2.6.12"
+        "vue-svg-loader": "^0.16.0",
+        "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
         "@babel/core": "^7.16.5",
