--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "babel-loader": "^8.2.3",
         "core-js": "^3.6.5",
         "sass-resources-loader": "^2.2.4",
+        "vee-validate": "^4.5.8",
         "vue": "^3.0.0",
         "vue-router": "^4.0.12",
         "vuex": "^4.0.2"
